install oracle jdk8 by hand